--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ header {
     justify-content: center;
     align-items: center;
     padding: 5rem;
+    width: auto;
     height: 25rem;
     font-family: "Nothing You Could Do", cursive;
 }
@@ -57,6 +58,7 @@ body {
     font-family: "Newsreader", serif;
     font-size: 1.2rem;
     min-width: 700px;
+    width: auto;
 }
 
 ul {
