--- a/styles.css
+++ b/styles.css
@@ -53,12 +53,13 @@ header h2 {
 }
 
 body {
-    margin: 0;
+    background-size: cover;
     text-align: center;
     font-family: "Newsreader", serif;
     font-size: 1.2rem;
     min-width: 700px;
     width: auto;
+    margin: 0;
 }
 
 ul {
