--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,9 @@ body {
     font-family: "Newsreader", serif;
     font-size: 1.2rem;
     min-width: 700px;
-    width: auto;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
     margin: 0;
 }
 
