--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ header {
     justify-content: center;
     align-items: center;
     padding: 5rem;
-    width: auto;
+    width: 100%;
     height: 25rem;
     font-family: "Nothing You Could Do", cursive;
 }
