--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ DARK BLUE: #1D3557
 
 header {
     background-image: url('/images/vallejo.webp');
-    background-size:center;
+    background-size: center;
     background-repeat: no-repeat;
     background-position: center;
     background-color: #1D3557;
@@ -32,8 +32,7 @@ header {
     justify-content: center;
     align-items: center;
     padding: 5rem;
-    width: 100%;
-    height: 25rem;
+    height: 20rem;
     font-family: "Nothing You Could Do", cursive;
 }
 
@@ -53,7 +52,7 @@ header h2 {
 }
 
 body {
-    background-size: cover;
+    background-size: 100% auto;
     text-align: center;
     font-family: "Newsreader", serif;
     font-size: 1.2rem;
@@ -137,6 +136,7 @@ footer img {
 #activities-section {
     color: #1D3557;
     background-color: #F1FAEE;
+    background-size: inherit;
     padding: 2rem;
 }
 
