--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ DARK BLUE: #1D3557
 }
 
 header {
-    background-image: url('/images/vallejo.webp');
+    background-image: url('./images/vallejo.webp');
     background-size: center;
     background-repeat: no-repeat;
     background-position: center;
